--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <!-- 侧边栏 -->
       <ul class="mainapp-sidemenu">
         <li onclick="push('/react17')">React17</li>
+        <li onclick="push('/localReact17')">本地React17</li>
       </ul>
       <!-- 子应用  -->
       <main id="subapp-container"></main>
